<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/app_background"
    tools:context=".MainActivity$MainFragment">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_alignWithParentIfMissing="false">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="@dimen/random_buttons_min_width"
            android:text="@string/random_call"
            android:id="@+id/button_call"
            android:layout_alignParentTop="true" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:minWidth="@dimen/random_buttons_min_width"
            android:text="@string/random_text"
            android:id="@+id/button_text"
            android:layout_below="@+id/button_call" />
    </RelativeLayout>

    <ImageView
        android:id="@+id/app_logo"
        android:layout_width="@dimen/app_logo_size"
        android:layout_height="@dimen/app_logo_size"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:alpha="0.6"
        android:contentDescription="@string/app_name"
        android:src="@android:drawable/stat_notify_sync_noanim"/>

    <TextView
        android:id="@+id/debugTextResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text=""
        android:textColor="@color/title_color"
        android:textStyle="bold|italic"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
