<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_accent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/dialog_msg_prompt_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="10dp"
        android:text="@string/msg_prompt_text"
        android:textColor="@color/main_text_color"
        android:textSize="@dimen/msg_prompt_text_size" />

    <EditText
        android:id="@+id/dialog_msg_prompt_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_padding"
        android:gravity="left|top"
        android:text="Cenas maradas"
        android:maxLength="140"
        android:maxLines="6"
        android:lines="6"
        android:background="@android:drawable/editbox_background_normal"
        android:textSize="@dimen/msg_prompt_input_text_size" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:layout_margin="@dimen/default_padding"
        android:orientation="horizontal">

        <Button
            style="@style/DefaultButton"
            android:id="@+id/dialog_msg_prompt_feeling_lucky"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/feeling_lucky"
            android:textAllCaps="false"
            android:textSize="@dimen/msg_prompt_buttons_text_size"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"/>

        <Button
            style="@style/DefaultButton"
            android:id="@+id/dialog_msg_prompt_send"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/msg_send"
            android:textAllCaps="false"
            android:textSize="@dimen/msg_prompt_buttons_text_size"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"/>

    </LinearLayout>

</LinearLayout>